@@ -1,3 +1,13 @@
+2000-09-01  Eric Melski  <ericm@ajubasolutions.com>
+
+	* win/makefile.vc (install-libraries): 
+	* win/Makefile.in (install-libraries): 
+	* unix/Makefile.in (install-libraries): Added tkPlatDecls.h to
+	list of header files to install.
+
+	* generic/tk.h: Added #include "tkPlatDecls.h", which declares the
+	platform specific component of the public Tk stubs API's.
+
 2000-08-29  Eric Melski  <ericm@ajubasolutions.com>
 
 	* win/tkWinMenu.c (DrawWindowsSystemBitmap): Use scratchDC
